--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -1,5 +1,5 @@
 <h3>{{viewTitle}}</h3>
-<form action="/" method="post">
+<form action="/add" method="post">
 
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
