--- a/views/employee/list.hbs
+++ b/views/employee/list.hbs
@@ -17,7 +17,7 @@
       <td>{{this.firstname}}</td>
       <td>{{this.mobile}}</td>
       <td>{{this.city}}</td>
-      <td><a><i class="fa fa-pencil fa-lg"></i></a>
+      <td><a href="/edit/{{this.id}}"><i class="fa fa-pencil fa-lg"></i></a>
       <a><i class="fa fa-trash fa-lg"></i></a>
       </td>
     </tr>
