--- a/views/employee/edit.hbs
+++ b/views/employee/edit.hbs
@@ -4,27 +4,24 @@
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
     <input value="{{model.email}}" name="email" type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
 
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label>
-    <input value="{{model.name}}" name="name" type="text" class="form-control"  placeholder="Enter Name">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input value="{{model.firstname}}" name="name" type="text" class="form-control"  placeholder="Enter Name">
   </div>
 
     <div class="form-group">
     <label for="exampleInputEmail1">Mobile</label>
     <input value="{{model.mobile}}" name="mobile" type="number" class="form-control" id="exampleInputEmail1" placeholder="Enter Mobile">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
 
     <div class="form-group">
     <label >City</label>
     <input value="{{model.city}}" name="city" type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter City">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
 
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Edit</button>
+  <a  class="btn btn-secondary" href="/">View </a>
 </form>
